# Med_IE_System

./: 01_data_exploration.ipynb  Med_IE_System.code-workspace  README.md   README_MedIE.md  main.py  pyproject.toml
notebooks/: 01_data_exploration.ipynb  02_ir_baseline.ipynb  03_preprocessing.ipynb
scripts/: data_exploration.py  ir_baseline.py
